--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <script type="text/javascript" src="https://js.cside.dev/script.js"></script>
     ...
   </head>
