--- a/index.html
+++ b/index.html
@@ -1,113 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- index.html -->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-<!-- index.html -->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
     <script type="text/javascript" src="https://js.cside.dev/script.js"></script>
-    ...
-  </head>
-  <body>
-  ...
-  </body>
-</html>
-
     <meta charset="UTF-8">
-    <title>Test Payment Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            margin: 20px;
-        }
-        .container {
-            max-width: 400px;
-            margin: auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 5px;
-        }
-        h2 {
-            text-align: center;
-        }
-        form div {
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        input {
-            width: calc(100% - 20px);
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: #28a745;
-            color: #fff;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #218838;
-        }
-        #message {
-            margin-top: 20px;
-            padding: 10px;
-            border-radius: 3px;
-            display: none;
-        }
-        .success {
-            background-color: #d4edda;
-            color: #155724;
-        }
-        .error {
-            background-color: #f8d7da;
-            color: #721c24;
-        }
-    </style>
+    <title>Payment Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<div class="container">
-    <h2>Test Payment</h2>
-    <form id="paymentForm">
-        <div>
-            <label for="cardNumber">Card Number:</label>
-            <input type="text" id="cardNumber" name="cardNumber" required>
-        </div>
-        <div>
-            <label for="expiryDate">Expiration Date:</label>
-            <input type="text" id="expiryDate" name="expiryDate" placeholder="MM/YY" required>
-        </div>
-        <div>
-            <label for="cvv">CVV:</label>
-            <input type="text" id="cvv" name="cvv" required>
-        </div>
-        <div>
-            <label for="name">Name on Card:</label>
-            <input type="text" id="name" name="name" required>
-        </div>
-        <button type="submit">Submit Payment</button>
-    </form>
-    <div id="message" class="success" style="display:none;">
-        Payment successful!
+    <div class="container">
+        <h2>Payment Page</h2>
+        <button id="darkModeToggle">Toggle Dark Mode</button>
+        <button id="resetForm">Reset Form</button>
+        <form id="paymentForm">
+            <div>
+                <label for="cardNumber">Card Number:</label>
+                <input type="text" id="cardNumber" name="cardNumber" placeholder="1234 5678 9012 3456" required>
+                <div class="error" id="cardNumberError">Invalid card number (must be 16 digits).</div>
+            </div>
+            <div>
+                <label for="expiryDate">Expiration Date:</label>
+                <input type="text" id="expiryDate" name="expiryDate" placeholder="MM/YY" required>
+                <div class="error" id="expiryDateError">Invalid expiration date (must be MM/YY and a future date).</div>
+            </div>
+            <div>
+                <label for="cvv">CVV:</label>
+                <input type="text" id="cvv" name="cvv" placeholder="123" required>
+                <div class="error" id="cvvError">Invalid CVV (must be 3 or 4 digits).</div>
+            </div>
+            <div>
+                <label for="name">Name on Card:</label>
+                <input type="text" id="name" name="name" placeholder="John Doe" required>
+                <div class="error" id="nameError">Invalid name (must contain only alphabetic characters).</div>
+            </div>
+            <button type="submit">Submit Payment</button>
+        </form>
+        <div id="successMessage" class="success">Payment successful!</div>
     </div>
-    <div id="errorMessage" class="error" style="display:none;">
-        Payment failed. Please check your card details.
-    </div>
-</div>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
+    <script src="darkMode.js"></script>
+    <script src="formReset.js"></script>
+    <script src="inputMasking.js"></script>
 </body>
 </html>
