--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <div id="successMessage" class="success">Payment successful!</div>
     </div>
 
-    <script src="https://proxy.cside.dev/script.js"></script>
-    <script src="https://proxy.cside.dev/darkMode.js"></script>
-    <script src="https://proxy.cside.dev/formReset.js"></script>
-    <script src="https://proxy.cside.dev/inputMasking.js"></script>
+    <script src="script.js"></script>
+    <script src="darkMode.js"></script>
+    <script src="formReset.js"></script>
+    <script src="inputMasking.js"></script>
 </body>
 </html>
