--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="text/javascript" src="https://js.cside.dev/script.js"></script>
+    <script src="https://proxy.csidetm.com/script.js"></script>
     <meta charset="UTF-8">
     <title>Payment Page</title>
     <link rel="stylesheet" href="style.css">
